--- a/notebook/analysis.ipynb
+++ b/notebook/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Path to your image\n",
-    "image_path = \"data/224 Rue Robert Saint-Bruno-de-Montarville.png\"\n",
+    "image_path = \"data/15 Place Massey Saint-Bruno-de-Montarville.png\"\n",
     "excel_path = image_path.replace(\".png\", \".xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,28 +50,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data =\n",
+      "data = \"\"\"\n",
       "Pièce;Dimensions\n",
-      "Hall d'entrée/Vestibule;4,8 X 4,8 p\n",
-      "Salon;14,2 X 13,7 p irr\n",
-      "Salle à manger;19,6 X 13,1 p irr\n",
-      "Cuisine;17,4 X 11 p\n",
-      "Coin-repas;9,7 X 6,7 p\n",
-      "Salle familiale;24,10 X 15,6 p\n",
-      "Chambre à coucher;11,5 X 9,7 p\n",
-      "Salle d'eau;8,1 X 5,9 p\n",
-      "Chambre à coucher principale;15,6 X 12,6 p\n",
-      "Chambre à coucher;11,6 X 9,10 p\n",
-      "Chambre à coucher;10,2 X 9,8 p\n",
-      "Salle de bains;10,11 X 9,11 p\n",
-      "Salle de jeux;25,7 X 16,3 p irr\n"
+      "Hall d'entrée/Vestibule;8,10 X 4,9 p\n",
+      "Salon;15 X 11,5 p\n",
+      "Salle à manger;10,7 X 12 p\n",
+      "Cuisine;8,4 X 11,2 p\n",
+      "Chambre à coucher principale;13,6 X 10,2 p\n",
+      "Penderie (Walk-in);4,5 X 7,7 p\n",
+      "Salle de bains;13,6 X 9 p irr\n",
+      "Chambre à coucher;11 X 10 p\n",
+      "Chambre à coucher;11 X 10 p\n",
+      "Salle familiale;20 X 11,6 p\n",
+      "Bureau;11 X 8,9 p\n",
+      "Salle de jeux;10,10 X 17 p\n",
+      "Salle de bains;10,5 X 6,4 p\n",
+      "\"\"\"\n"
      ]
     }
    ],
@@ -129,35 +130,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 2) (2483477428.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[34], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    Hall d'entrée/Vestibule;4,8 X 4,8 p\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 2)\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[30], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(StringIO(\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m), sep\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m;\u001b[39m\u001b[38;5;124m'\u001b[39m, header\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, names\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPièce\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDimensions\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      3\u001b[0m df\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pièce</th>\n",
+       "      <th>Dimensions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hall d'entrée/Vestibule</td>\n",
+       "      <td>8,10 X 4,9 p</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Salon</td>\n",
+       "      <td>15 X 11,5 p</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Salle à manger</td>\n",
+       "      <td>10,7 X 12 p</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cuisine</td>\n",
+       "      <td>8,4 X 11,2 p</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Chambre à coucher principale</td>\n",
+       "      <td>13,6 X 10,2 p</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Penderie (Walk-in)</td>\n",
+       "      <td>4,5 X 7,7 p</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Salle de bains</td>\n",
+       "      <td>13,6 X 9 p irr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Chambre à coucher</td>\n",
+       "      <td>11 X 10 p</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Chambre à coucher</td>\n",
+       "      <td>11 X 10 p</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Salle familiale</td>\n",
+       "      <td>20 X 11,6 p</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Bureau</td>\n",
+       "      <td>11 X 8,9 p</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Salle de jeux</td>\n",
+       "      <td>10,10 X 17 p</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Salle de bains</td>\n",
+       "      <td>10,5 X 6,4 p</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Pièce      Dimensions\n",
+       "0        Hall d'entrée/Vestibule    8,10 X 4,9 p\n",
+       "1                          Salon     15 X 11,5 p\n",
+       "2                 Salle à manger     10,7 X 12 p\n",
+       "3                        Cuisine    8,4 X 11,2 p\n",
+       "4   Chambre à coucher principale   13,6 X 10,2 p\n",
+       "5             Penderie (Walk-in)     4,5 X 7,7 p\n",
+       "6                 Salle de bains  13,6 X 9 p irr\n",
+       "7              Chambre à coucher       11 X 10 p\n",
+       "8              Chambre à coucher       11 X 10 p\n",
+       "9                Salle familiale     20 X 11,6 p\n",
+       "10                        Bureau      11 X 8,9 p\n",
+       "11                 Salle de jeux    10,10 X 17 p\n",
+       "12                Salle de bains    10,5 X 6,4 p"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -168,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,150 +291,40 @@
     "\n",
     "# Rename the new columns and add them to the original DataFrame\n",
     "df['width'] = dimensions_df[0]\n",
-    "df['length'] = dimensions_df[1]"
+    "df['length'] = dimensions_df[1]\n",
+    "\n",
+    "# convert to numeric\n",
+    "df['width'] = pd.to_numeric(df['width'])\n",
+    "df['length'] = pd.to_numeric(df['length'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Pièce</th>\n",
-       "      <th>Dimensions</th>\n",
-       "      <th>width</th>\n",
-       "      <th>length</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Salon</td>\n",
-       "      <td>10,8 X 17,8 p</td>\n",
-       "      <td>10.8</td>\n",
-       "      <td>17.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Salle à manger</td>\n",
-       "      <td>10,7 X 10,11 p</td>\n",
-       "      <td>10.7</td>\n",
-       "      <td>10.11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Cuisine</td>\n",
-       "      <td>10,4 X 14,2 p</td>\n",
-       "      <td>10.4</td>\n",
-       "      <td>14.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Chambre à coucher principale</td>\n",
-       "      <td>10,9 X 16,11 p</td>\n",
-       "      <td>10.9</td>\n",
-       "      <td>16.11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Chambre à coucher</td>\n",
-       "      <td>12,9 X 10,7 p</td>\n",
-       "      <td>12.9</td>\n",
-       "      <td>10.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Salle de bains</td>\n",
-       "      <td>5,4 X 8 p</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Chambre à coucher</td>\n",
-       "      <td>7,11 X 10 p</td>\n",
-       "      <td>7.11</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Bureau</td>\n",
-       "      <td>8,9 X 7,1 p</td>\n",
-       "      <td>8.9</td>\n",
-       "      <td>7.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Salle familiale</td>\n",
-       "      <td>13,3 X 17,11 p</td>\n",
-       "      <td>13.3</td>\n",
-       "      <td>17.11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Salle de lavage</td>\n",
-       "      <td>4,9 X 10,11 p</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>10.11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Salle de bains</td>\n",
-       "      <td>8 X 10,2 p</td>\n",
-       "      <td>8</td>\n",
-       "      <td>10.2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           Pièce      Dimensions width length\n",
-       "0                          Salon   10,8 X 17,8 p  10.8   17.8\n",
-       "1                 Salle à manger  10,7 X 10,11 p  10.7  10.11\n",
-       "2                        Cuisine   10,4 X 14,2 p  10.4   14.2\n",
-       "3   Chambre à coucher principale  10,9 X 16,11 p  10.9  16.11\n",
-       "4              Chambre à coucher   12,9 X 10,7 p  12.9   10.7\n",
-       "5                 Salle de bains       5,4 X 8 p   5.4      8\n",
-       "6              Chambre à coucher     7,11 X 10 p  7.11     10\n",
-       "7                         Bureau     8,9 X 7,1 p   8.9    7.1\n",
-       "8                Salle familiale  13,3 X 17,11 p  13.3  17.11\n",
-       "9                Salle de lavage   4,9 X 10,11 p   4.9  10.11\n",
-       "10                Salle de bains      8 X 10,2 p     8   10.2"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Price per square foot: 414.68 $/ft²\n"
+     ]
     }
    ],
    "source": [
-    "df"
+    "# Compute habitable area\n",
+    "habitable_area = sum(df['width'] * df['length'])\n",
+    "house_price = 630_000\n",
+    "\n",
+    "# Compute price per square foot\n",
+    "price_per_square_foot = house_price / habitable_area\n",
+    "\n",
+    "print(f\"Price per square foot: {price_per_square_foot:.2f} $/ft²\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,13 +333,6 @@
     "\n",
     "save_to_excel(df)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -378,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
